client/vite-project/src/components/user-profile/UserProfile.module.scss
.page__wrapper {
    display: grid;
    max-width: 1000px;
    margin: 0 auto;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 15rem 10rem 1fr;
}

.profile__page__welcome__message__container {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    align-self: start;
    justify-self: start;
    // box-shadow: 1rem 1rem 1rem rgb(226, 226, 226);
    border-radius: .5rem;
    padding: 1rem 2rem;
}

.profile__page__welcome__message {
    font-size: 2rem;
    font-weight: 300;
    margin: 0;
    display: inline-block;

    &::first-letter {
        font-weight: bold;
        font-size: 2.5rem;
    }

    &__email {
        font-size: 2rem;
        font-weight: bold;
        padding-left: .4rem;

        &::after {
            content: '.';
            color: red;
            font-weight: bold;
        }
    }

    &__info {
        font-size: .9rem;
        text-align: center;
        font-weight: 300;
        align-self: center;
    }
}

.profile__page__update__password__container {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    display: flex;
    flex-direction: column;
    align-items: end;
    justify-content: end;
}


.profile__page__heading {
    grid-row: 2 / 3;
    grid-column: 1 / 3;
    font-size: 4rem;
    font-weight: 400;
    text-align: center;
    line-height: 1.05;

    &::after {
        content: '.';
        color: red;
        font-weight: bold;
    }

    &::first-letter {
        font-size: 5rem;
        font-weight: bold;
    }
}

.quotes__container {
    grid-column: 1 / 3;
    height: 600px;
    overflow-y: scroll;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
    // the below margin is not the best solution, but on small screens quotes container overlaps the heading. leaving it as is for now as it fixes the issue, but it is far from ideal and needs changing / optimizing
    margin-top: 5rem;
}

.quote__card__wrapper {
    width: 200px;
    padding: .75rem 1.5rem;
    border-radius: .5rem;
    // background-color: rgb(250, 250, 250);
    background-color: rgb(22, 22, 22);
    color: white;
    // box-shadow: .7rem .7rem .7rem rgb(243, 243, 243);
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    &__quote__author {
        font-size: .75rem;
        color: rgb(228, 228, 228);
        font-weight: bold;
        text-align: end;
    }

    &__quote__text {
        font-size: .85rem;
        color: rgb(228, 228, 228);
    }

    &__navigation__button {
        all: unset;
        font-weight: bold;
        font-size: .6rem;
        cursor: pointer;

        background-color: white;
        color: black;
        border-radius: .5rem;
        padding: .3rem .8rem;
        transition: background-colors .3s;

        &:hover {
            background-color: rgb(56, 56, 56);
            color: rgb(238, 238, 238);
            transition: background-color .3s;
        }
    }
}

.quote__card__author__and__nav__button__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.loader__container {
    align-self: center;
    justify-self: center;
}

// styles for quotes container scrollbar

.quotes__container::-webkit-scrollbar {
    width: 10px;
}

.quotes__container::-webkit-scrollbar-track {
    background-color: black;
}

.quotes__container::-webkit-scrollbar-thumb {
    background-color: rgb(148, 148, 148);
}

// styles for small sizes

@media (max-width: 500px) {

    .page__wrapper {
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 17rem 10rem 1fr;
    }


    .profile__page__welcome__message__container {
        grid-row: 1 / 2;
        grid-column: 1 / 3;
        justify-self: center;
    }

    .profile__page__update__password__container {
        grid-row: 1 / 2;
        grid-column: 1 / 3;
        justify-self: center;
    }
}

